fix header drag bug

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Gong-Po service</title>
     <link rel="stylesheet" href="photon\dist\css\photon.css">
     <script src="index.js" charset="utf-8"></script>
+    <style>
+    h1 {
+        -webkit-app-region: drag;
+    }
+    </style>
   </head>
   <body>
     <div class="window">
@@ -15,9 +20,7 @@
       </div>
       <footer class="toolbar toolbar-footer">
         <div class="toolbar-actions">
-          <button class="btn btn-default">
-            developer homepage
-          </button>
+          code-a-design.github.io
           <button class="btn btn-primary pull-right"id="btn_quit">
             Quit
           </button>
