--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="toolbar-actions">
           code-a-design.github.io
           <button class="btn btn-primary pull-right"id="btn_quit">
-            Quit
+            <span class="icon icon-cancel-circled"></span> Quit
           </button>
           <script>
               const {remote} = require('electron')
